--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -49,7 +49,7 @@
 					<h1 style="font-size:45px;"><a id="OOS"></a>(OOS) Out of Stock Dashboard</h1>
 					<h2 style="font-size:30px; color:#1f49c7;">The costly ramifications of out of stocks continue to plague the industry.</h2>
 					<div class="pie">
-					<img src="Images/piechart.png" alt="GW Logo" style="max-width:90%;height:auto;">
+					<img src="piechart.png" alt="GW Logo" style="max-width:90%;height:auto;">
 					</div>
 					<p style="font-size:25px;">According to the FMI/GMA Trading Partner Alliance Report:</p>
 					<ul style="font-size:20px;">
