--- a/Index.html
+++ b/Index.html
@@ -31,10 +31,11 @@
 		<div class="container">
 			
 			<h1>Getting Started</h1>
-			<p>Introducing GlobalWorx OOSalert™, a multi-channel program that helps grocery retailers and Direct Store Distributors (DSD) 
-			reduce lost sales which will drastically improve in-stock position outcomes. OOSalert™ is a specialized, highly-effective 
-			application	focused on significantly mitigating the out-of-stock problem across the retail industry. Begin by watching our introductory video below: </p>
-  			<iframe width="90%" height="580px" src="https://www.youtube.com/embed/TE2gVftrXfE" 
+			<p>Introducing GlobalWorx OOSalert, a multi-channel program that helps grocery retailers and Direct Store Distributors (DSD) 
+			reduce lost sales which will drastically improve in-stock position outcomes. OOSalert is a specialized, highly-effective 
+			application focused on significantly mitigating the out-of-stock problem across the retail industry. Begin by watching our introductory video below: </p>
+  			
+			<iframe max-width="90%" height="auto" src="https://www.youtube.com/embed/TE2gVftrXfE" 
 			frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</section>
