--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
 			reduce lost sales which will drastically improve in-stock position outcomes. OOSalert is a specialized, highly-effective 
 			application focused on significantly mitigating the out-of-stock problem across the retail industry. Begin by watching our introductory video below: </p>
   			
-			<iframe max-width="90%" height="auto" src="https://www.youtube.com/embed/TE2gVftrXfE" 
+			<iframe max-width="90%" height="550px" src="https://www.youtube.com/embed/TE2gVftrXfE" 
 			frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</section>
