--- a/HowTo.html
+++ b/HowTo.html
@@ -34,56 +34,56 @@
   	
 			<h3 style="font-size:40px;"><a id="AggregationFilter"></a>Aggregation Filter</h3>
 				<p>Dashboards trendlines can be viewed over specified periods of time aggregated by your selection in the filter.</p>
-				<img src="Images/AggregationFilter.gif" alt="Aggregation Filter" style="max-width:90%;height:auto;">
+				<img src="AggregationFilter.gif" alt="Aggregation Filter" style="max-width:90%;height:auto;">
 
 			<h3 style="font-size:40px;"><a id="CustomDateRange">Custom Date Range</h3>
 				<p>To select a desired date range for your dashboard, open the filter options and under date range select "Custom Range".
 				This will be where you can insert a start and end date by selecting the calendar icon or manually typing it in the text box.
 				Once your date range is selected, press the "Apply" button at the bottom right of the filter box.</p>
-				<img src="Images/CustomDateRange.gif" alt="Custom Date Range" style="max-width:90%;height:auto;">
+				<img src="CustomDateRange.gif" alt="Custom Date Range" style="max-width:90%;height:auto;">
 
 			<h3 style="font-size:40px;"><a id="DownloadingChartData">Downloading Chart Data</h3>
 				<p>The underlying dataset of any chart can be downloaded as a CSV file by selecting "Download Data".</p>
-				<img src="Images/DownloadingChartData.gif" alt="Downloading Chart Data" style="max-width:90%;height:auto">
+				<img src="DownloadingChartData.gif" alt="Downloading Chart Data" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="DownloadChartImage">Downloading Chart Image</h3>
 				<p>Graph-like charts can be downloaded as a PNG file through the "Download Image" option.</p>
-				<img src="Images/ChartImage.gif" alt="Downloading Chart Image" style="max-width:90%;height:auto">
+				<img src="ChartImage.gif" alt="Downloading Chart Image" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="DashboardMenuNavigation">Dashboard Menu Navigation</h3>
 				<p>By selecting the "Dashboards" option located at the top of your screen you will be able to view all the dashboards and reports available.
 				Click on the desired dashboard or report and it will automatically display on the screen.</p>
-				<img src="Images/NavigatingDashboards.gif" alt="Dashboard Menu Navigation" style="max-width:90%;height:auto">
+				<img src="NavigatingDashboards.gif" alt="Dashboard Menu Navigation" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="RemovingFilters">Removing Filters</h3>
 				<p>In order to remove the filters you have previously selected you will need to open the filter box and deselect the chosen criteria.
 				Once you have removed the filters you will need to press the "Apply" button.</p>
-				<img src="Images/RemoveFilters.gif" alt="Removing Filters" style="max-width:90%;height:auto">
+				<img src="RemoveFilters.gif" alt="Removing Filters" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="SearchFilters">Search Filters</h3>
 				<p>In order to perform a search you will need to open the filter box. At the top of each filter you will see a "Search" textbox.
 				Type in the search box for your desired filter and once it appears below, select the checkbox.
 				In order to search for a store number you will need to enter a # sign before the store number. Once the search criteria is selected press the "Apply" button.</p>
-				<img src="Images/SearchFilters.gif" alt="Search Filters" style="max-width:90%;height:auto">
+				<img src="SearchFilters.gif" alt="Search Filters" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="LegendOptions">Select/Remove Legend Options</h3>
 				<p>Charts that display a legend give you the abilty to select or remove options to further identify trends and data points.</p>
-				<img src="Images/SelectLegendOptions.gif" alt="Select/Remove Legend Options" style="max-width:90%;height:auto">
+				<img src="SelectLegendOptions.gif" alt="Select/Remove Legend Options" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="UsingFilters">Using Filters</h3>
 				<p>To add an existing filter to a dashboard, click on the Filters ribbon right below the dashboard name.
 				Once you have selected the fields you wish to filter by, press the "Apply" button and all charts will return your selected data.</p>
-				<img src="Images/UsingFilters.gif" alt="Using Filters" style="max-width:90%;height:auto">
+				<img src="UsingFilters.gif" alt="Using Filters" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="ViewMap">View Map</h3>
 				<p>In order to re-size the map to zoom in or out use the +/- icon located at the top left of the map.
 				Once you have zoomed into the desired location you can hover over the data points to view detailed information.</p>
-				<img src="Images/ViewMap.gif" alt="View Map" style="max-width:90%;height:auto">
+				<img src="ViewMap.gif" alt="View Map" style="max-width:90%;height:auto">
 
 			<h3 style="font-size:40px;"><a id="ZoomingCharts">Zooming in Charts</h3>
 				<p>To zoom on a chart, click on the graph and choose the beginning of the range to zoom in on, 
 				dragging and releasing the cursor at the end of the range.</p>
-				<img src="Images/ZoomChart.gif" alt="Zooming Chart" style="max-width:90%;height:auto">
+				<img src="ZoomChart.gif" alt="Zooming Chart" style="max-width:90%;height:auto">
 
 		</div>
 	</section>
