--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -319,7 +319,7 @@
 				<div class="leftcolumn">
 					
 					<h1 style="font-size:45px;"><a id="Scorecard"></a>Scorecard Report</h1>
-					<h2 style="font-size:30px; color: royalblue;">The costly ramifications of out of stocks continue to plague the industry.</h2>
+					<h2 style="font-size:30px; color: royalblue;">Measuring key performance indicators to track in-store service levels.</h2>
 					<img src="scorecard.png" alt="KPI" style="max-width: 80%;height:auto;">
 					<img src="kpi.png" alt="KPI" style="max-width: 80%;height:auto;">
 				
