--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -329,9 +329,9 @@
 					<li style="font-size:30px;>Average lost sales per store</li>
 					
 					<p style="font-size:30px;>Scorecard color scale</p>
-					<p style="font-size:30px;><b style="color:green;"><Green:</b> Less than or equal to 0%</p>
-					<p style="font-size:30px;><b style="color:#DAA520;"><Yellow:</b> Greater than 5%</p>
-					<p style="font-size:30px;><b style="color:red;"><Red:</b> Less than or equal to 5%</p>
+					<p style="font-size:30px;><b style="color:green"><Green:</b> Less than or equal to 0%</p>
+					<p style="font-size:30px;><b style="color:#DAA520"><Yellow:</b> Greater than 5%</p>
+					<p style="font-size:30px;><b style="color:red"><Red:</b> Less than or equal to 5%</p>
 				
 				<div style="font-size: 25px;p">
 					<p>Scorecards can be created for any stakeholder including:</p>
