--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -330,9 +330,9 @@
 					<li>Average lost sales per store</li>
 					
 					<p>Scorecard color scale</p>
-					<p><b style="color:green"><Green:</b> Less than or equal to 0%</p>
-					<p><b style="color:#DAA520"><Yellow:</b> Greater than 5%</p>
-					<p><b style="color:red"><Red:</b> Less than or equal to 5%</p>
+					<p><b style="color:green">Green:</b> Less than or equal to 0%</p>
+					<p><b style="color:#DAA520">Yellow:</b> Greater than 5%</p>
+					<p><b style="color:red">Red:</b> Less than or equal to 5%</p>
 							       </div>
 															      
 				<div style="font-size: 25px;p">
