--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -323,16 +323,16 @@
 					<img src="kpi.png" alt="KPI" style="max-width: 80%;height:auto;">
 					
 					<div style="font-size:25px;">
-					<p>The scorecard measures 4 performance indicators:</p>
-					<li>Average CSIs per store</li>
-					<li>Unrespnsive CSIs</li>
-					<li>Average scanned OOS per store</li>
-					<li>Average lost sales per store</li>
+						<p><b>The scorecard measures 4 performance indicators:</b></p>
+						<li>Average CSIs per store</li>
+						<li>Unrespnsive CSIs</li>
+						<li>Average scanned OOS per store</li>
+						<li>Average lost sales per store</li>
 					
-					<p><b>Scorecard color scale</b></p>
-					<p><b style="color:green">Green:</b> Less than or equal to 0%</p>
-					<p><b style="color:#DAA520">Yellow:</b> Greater than 5%</p>
-					<p><b style="color:red">Red:</b> Less than or equal to 5%</p>
+						<p><b>Scorecard color scale</b></p>
+						<p><b style="color:green">Green:</b> Less than or equal to 0%</p>
+						<p><b style="color:#DAA520">Yellow:</b> Between 0-5%</p>
+						<p><b style="color:red">Red:</b> Less than or equal to 5%</p>
 							       </div>
 					</br>							
 					<img src="scorecard.png" alt="KPI" style="max-width: 80%;height:auto;">
