--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -323,7 +323,7 @@
 					<img src="kpi.png" alt="KPI" style="max-width: 80%;height:auto;">
 					
 				<div style="font-size:25px;">
-					<p>The scorecard measures 4 performance indicators:</p>
+					<p><b>The scorecard measures 4 performance indicators:</b></p>
 					<li>Average CSIs per store</li>
 					<li>Unrespnsive CSIs</li>
 					<li>Average scanned OOS per store</li>
@@ -331,7 +331,7 @@
 					
 					<p><b>Scorecard color scale</b></p>
 					<p><b style="color:green">Green:</b> Less than or equal to 0%</p>
-					<p><b style="color:#DAA520">Yellow:</b> Greater than 5%</p>
+					<p><b style="color:#DAA520">Yellow:</b> Between 0-4.99%</p>
 					<p><b style="color:red">Red:</b> Less than or equal to 5%</p>
 							       </div>
 					</br>									      
