--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -365,7 +365,7 @@
 				<div class="leftcolumn">
 					
 					<h1 style="font-size:45px;"><a id="MDT"></a>Multi-Day Trend Dashboard</h1>
-					<h2 style="font-size:30px; color: royalblue;">The costly ramifications of out of stocks continue to plague the industry.</h2>
+					<h2 style="font-size:30px; color: royalblue;">The leading cause of customer defection.</h2>
 					<img src="multidayfilter.png" alt="GW Logo" style="max-width:100%;height:auto;">
 					<img src="multidaychart.png" alt="GW Logo" style="max-width:100%;height:auto;">
 					<img src="multidayooschart.png" alt="GW Logo" style="max-width:100%;height:auto;">
