--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -418,6 +418,10 @@
 					<h1 style="font-size:40px;"><a id="CT"></a>Consecutive-Day Trend Dashboard</h1>
 					<h2 style="font-size:30px; color: royalblue;">The costly ramifications of out of stocks continue to plague the industry.</h2>
 					
+					<p style="font-size:20px;">OOSAlert provides the tools you need in order to solve the industry-wide out of stock problem.
+					This advanced notification system helps you and your trading partners locate, notify, and correct costly out-of-stocks
+					and other merchandising issues in hours instead of days.</p>
+					<img src="Trendchart.png" alt="GW Logo" style="max-width:100%;height:auto;">
 	
 				<div class="rightcolumn">
 					<div class="card">
