--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -424,7 +424,17 @@
 					This advanced notification system helps you and your trading partners locate, notify, and correct costly out-of-stocks
 					and other merchandising issues in hours instead of days.</p>
 					<img src="Trendchart.png" alt="GW Logo" style="max-width:100%;height:auto;">
-	
+					
+					<div class="pie">
+					<img src="piechart.png" alt="GW Logo" style="max-width:90%;height:auto;">
+					</div>
+					<p style="font-size:25px;">According to the FMI/GMA Trading Partner Alliance Report:</p>
+					<ul style="font-size:20px;">
+						<li>The OOS rate on regularly priced items averages <b>8%</b>.</li></br>
+						<li>The OOS rate on promoted items averages between <b>13%</b> and <b>15%</b>.</li></br>
+						<li>The OOS problem costs the grocery industry approximately <b>4%</b> in lost sales every year.</li>
+					</ul>
+					
 				<div class="rightcolumn">
 					<div class="card">
       					<h2>Filters:</h2>
