--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -363,6 +363,11 @@
 					
 					<h1 style="font-size:45px;"><a id="MDT"></a>Multi-Day Trend Dashboard</h1>
 					<h2 style="font-size:30px; color: royalblue;">The leading cause of customer defection.</h2>
+					<p>On the <b>FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item <b>70%</b> of the time.</p>
+					<p>On the <b>SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
+						make <b>NO PURCHASE</b>, or <b>GO TO ANOTHER STORE</b>.</p>
+					<p>On the <b>THIRD</b> OOS occurrence, <b>70% of shoppers will GO TO ANOTHER STORE</b>.</p>
+
 					<img src="multidayfilter.png" alt="GW Logo" style="max-width:100%;height:auto;">
 					<img src="multidaychart.png" alt="GW Logo" style="max-width:100%;height:auto;">
 					<img src="multidayooschart.png" alt="GW Logo" style="max-width:100%;height:auto;">
