--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -368,10 +368,10 @@
 					<h2 style="font-size:30px; color: royalblue;">The leading cause of customer defection.</h2>
 					
 					<div style="font-size: 25px;">
-					<p>On the <b>FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item 70% of the time.</p>
-					<p>On the <b>SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
+					<p>On the <b style="color:#DAA520">FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item 70% of the time.</p>
+					<p>On the <b style="color:#ff8c00">SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
 						make <b>NO PURCHASE</b>, or <b>GO TO ANOTHER STORE</b>.</p>
-					<p>On the <b>THIRD</b> OOS occurrence, 70% of shoppers will <b>GO TO ANOTHER STORE</b>.</p>
+					<p>On the <b style="color:red">THIRD</b> OOS occurrence, 70% of shoppers will <b>GO TO ANOTHER STORE</b>.</p>
 					</div>
 					
 					<img src="multidayfilter.png" alt="GW Logo" style="max-width:100%;height:auto;">
