--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -366,7 +366,7 @@
 					
 				<div style="font-size: 25px;">
 					<p>On the <b style="color:#DAA520">FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item 70% of the time.</p>
-					<p>On the <b style="color:#ff8c00">SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
+					<p>On the <b style="color:#cc7000">SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
 						make <b>NO PURCHASE</b>, or <b>GO TO ANOTHER STORE</b>.</p>
 					<p>On the <b style="color:red">THIRD</b> OOS occurrence, 70% of shoppers will <b>GO TO ANOTHER STORE</b>.</p>
 					</div>
