--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -365,7 +365,7 @@
 					<h2 style="font-size:30px; color: royalblue;">The leading cause of customer defection.</h2>
 					
 				<div style="font-size: 25px;">
-					<p>On the <b style="color:#DAA520">FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item 70% of the time.</p>
+					<p>On the <b style="color:#ffd700">FIRST</b> OOS occurrence the shopper will <b>SUBSTITUTE</b> another item 70% of the time.</p>
 					<p>On the <b style="color:#cc7000">SECOND</b> OOS occurrence, the shopper is equally likely to <b>SUBSTITUTE</b>, 
 						make <b>NO PURCHASE</b>, or <b>GO TO ANOTHER STORE</b>.</p>
 					<p>On the <b style="color:red">THIRD</b> OOS occurrence, 70% of shoppers will <b>GO TO ANOTHER STORE</b>.</p>
