--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -436,8 +436,8 @@
 					<h2 style="font-size:40px; color: royalblue;">Reducing out of stocks is <b>LOW HANGING FRUIT</b>.</h2>
 					
 					<img src="consecutiveooschart.png" alt="Consecutive-day Chart" style="max-width:100%;height:auto;">
-					<p style="font-size:30px;">By identifying these repeated out of stock items solving this complex 
-						problem has never been easier</p>
+					<p style="font-size:30px;">By identifying these consecutively out of stock items it has never been easier to solve this complex 
+						problem.</p>
 					<img src="consecutiveoosdata.png" alt="Consecutive-day data" style="max-width:100%;height:auto;">
 	    			</div>
 					
