--- a/Db&Reports.html
+++ b/Db&Reports.html
@@ -470,7 +470,7 @@
 			
 						<h3><b><u>Consecutive-day filter</u></b></h3>
 						<p style="font-size:15px;">Default is all days (can be cuztomized). User has the ability to select 1 choice from the options listed. Filters the entire dashboard 
-						by the selected day. For example, if user selects > 2 days option, items that have been out of stock 3 or more days for the selected daterange will be displayed. </p>
+						by the selected day. For example, if user selects > 2 days option, items that have been out of stock 3 or more consecutive days for the selected daterange will be displayed.</p>
 	
 						
 						
